--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
 
     height: 100vh;
@@ -6,18 +5,19 @@ body {
 
     margin: 0;
     padding: 0;
-    
+
+    overflow-x: hidden;
 
 }
 
-.texto-portada{
+.texto-portada {
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#apasionados{
+#apasionados {
 
     display: flex;
     justify-content: center;
@@ -27,18 +27,19 @@ body {
     font-weight: bold;
 }
 
-label{
+label {
     display: flex;
-    justify-content:start;
+    justify-content: start;
 }
-#quienessomos{
+
+#quienessomos {
     font-size: xx-large;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#formulariocontacto{
+#formulariocontacto {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,21 +47,21 @@ label{
     border-radius: 5%;
 }
 
-#menu{
+#menu {
     color: red;
     font-weight: bold;
     font-size: xx-large;
 }
 
-.h-5{
+.h-5 {
     height: 3em;
 }
 
-.card-text{
+.card-text {
     font-style: oblique;
 }
 
-.full{
+.full {
     display: flex;
     justify-content: center;
     align-items: center;
